--- a/package.json
+++ b/package.json
@@ -10,14 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.34",
-    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-responsive": "^9.0.2",
-    "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.6"
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
@@ -28,6 +25,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8"
   }
