--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@": ["./src"],
+      "@/*": ["./src/*"],
+      "@components": ["./src/components"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.jsx"]
