--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^4.12.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.1",
+    "react-swipeable": "^7.0.1",
+    "react-touch-events": "^3.0.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
